# Python-FastApi

./: pyproject.toml
fastapi_todo/: main.py  settings.py
tests/: test_main.py
