[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Allauddin-Abro <Allauddin924@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pytest = "^8.1.1"
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
